spin_admin/tom-2/tom-2-brokerpoll.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tom-2-brokerpoll
  namespace: desc-tom-2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-brokerpoll
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2023-02-06T16:44:40Z"
        field.cattle.io/ports: '[[]]'
        nersc.gov/collab_uids: 70268,99896
        nersc.gov/gid: "95089"
        nersc.gov/gids: 45703,60152,57177,58102,59318,60070,63477,64483,79186,70268,92576,94721,95089,96414,99650
        nersc.gov/roles: user
        nersc.gov/uid: "95089"
        nersc.gov/username: raknop
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-brokerpoll
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: tom-2-postgres
        - name: DB_NAME
          value: tom_desc
        - name: DB_PASS
          value: fragile
        - name: DB_USER
          value: postgres
        - name: CASSANDRA_HOST
          value: tom-2-cassandra
        - name: CASSANDRA_DB
          value: tom_desc
        - name: CASSANDRA_USER
          value: cassandra
        - name: CASSANDRA_PASSWORD
          value: cassandra
        - name: ALERCE_KAFKA_SERVER
          value: b-3-public.publicproduction.o8ncxm.c18.kafka.us-east-1.amazonaws.com:9196,b-2-public.publicproduction.o8ncxm.c18.kafka.us-east-1.amazonaws.com:9196,b-1-public.publicproduction.o8ncxm.c18.kafka.us-east-1.amazonaws.com:9196
        - name: FINK_GROUP_ID
          value: lsstfr-johann
        - name: FINK_SERVER
          value: 134.158.74.95:24499,
        - name: FINK_TOPIC
          value: fink_early_sn_candidates_ztf
        - name: FINK_USERNAME
          value: johann
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /secrets/pitt_google_auth_key.json
        - name: GOOGLE_CLOUD_PROJECT
          value: elasticc-challenge
        image: registry.nersc.gov/m1727/raknop/tom_desc_extcode
        imagePullPolicy: Always
        name: tom-2-brokerpoll
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 95089
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /secrets
          name: tom-2-secrets
        - mountPath: /tom_desc
          name: tom-2-deployment
        - mountPath: /sample
          name: tom-2-sample
        command: [ "python" ]
        args:
          - manage.py
          - brokerpoll2
          - --do-test
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 57177
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: registry-nersc
      volumes:
      - name: tom-2-secrets
        secret:
          defaultMode: 256
          optional: false
          secretName: tom-2-secrets
      - hostPath:
          path: /global/cfs/cdirs/lsst/groups/TD/SOFTWARE/tom_deployment/production-2/tom_desc/tom_desc
          type: Directory
        name: tom-2-deployment
      - hostPath:
          path: /global/cfs/cdirs/lsst/www/DESC_TD_PUBLIC/ELASTICC/ELASTICC2_TRAINING_SAMPLE
          type: Directory
        name: tom-2-sample
