spin_admin/tom-2/fakebroker.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fakebroker
  namespace: desc-tom-2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-desc-tom-2-fakebroker
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        field.cattle.io/ports: '[[]]'
        nersc.gov/collab_uids: 70268,99896
        nersc.gov/gid: "95089"
        nersc.gov/gids: 95089,57177,60152,96414
        nersc.gov/roles: user
        nersc.gov/uid: "95089"
        nersc.gov/username: raknop
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-desc-tom-2-fakebroker
    spec:
      containers:
      - image: registry.nersc.gov/m1727/raknop/fakebroker
        imagePullPolicy: Always
        name: fakebroker
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 95089
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        command: [ "python" ]
        args: [ "/fake/fakebroker.py", 
          "--source", "public.alerts.ztf.uw.edu:9092", "-t", "elasticc2-st2-wfd", "elasticc2-st2-ddf-limited",
          "--dest", "kafka-server:9092", "-u", "classifications",
          "-b", "/fake/schema/elasticc.v0_9_1.brokerClassification.avsc",
          "-s", "/fake/schema/elasticc.v0_9_1.alert.avsc" ]
        # args: [ "/fake/fakebroker.py", 
        #   "--source", "kafka-server9092", "-t", "alerts-wfd", "alerts-ddf-full",
        #   "--dest", "kafka-server:9092", "-u", "classifications",
        #   "-b", "/fake/schema/elasticc.v0_9_1.brokerClassification.avsc",
        #   "-s", "/fake/schema/elasticc.v0_9_1.alert.avsc" ]
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 57177
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: registry-nersc
---
apiVersion: v1
kind: Service
metadata:
  name: fakebroker
  namespace: desc-tom-2
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-desc-tom-2-fakebroker
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
