spin_admin/tom-2/tom-2-app-shell.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tom-2-app-shell
  namespace: desc-tom-2
  labels:
    workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-app-shell
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-app-shell
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-app-shell
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: tom-2-postgres
        - name: DB_NAME
          value: tom_desc
        - name: DB_PASS
          value: fragile
        - name: DB_USER
          value: postgres
        - name: CASSANDRA_HOST
          value: tom-2-cassandra
        - name: CASSANDRA_DB
          value: tom_desc
        - name: CASSANDRA_USER
          value: cassandra
        - name: CASSANDRA_PASSWORD
          value: cassandra
        - name: FINK_GROUP_ID
          value: lsstfr-johann
        - name: FINK_SERVER
          value: 134.158.74.95:24499,
        - name: FINK_TOPIC
          value: fink_early_sn_candidates_ztf
        - name: FINK_USERNAME
          value: johann
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /secrets/pitt_google_auth_key.json
        - name: GOOGLE_CLOUD_PROJECT
          value: elasticc-challenge
        image: registry.nersc.gov/m1727/raknop/tom_server_bindmount
        imagePullPolicy: Always
        name: tom-2-app-shell
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 95089
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /secrets
          name: tom-2-secrets
        - mountPath: /tom_desc
          name: tom-2-deployment
        - mountPath: /sample
          name: tom-2-sample
        - mountPath: /query_results
          name: tom-query-results
        - mountPath: /pgdump
          name: pgdump
        command: [ "tail" ]
        args: [ "-f", "/etc/issue" ]
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 57177
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: registry-nersc
      volumes:
      - name: tom-2-secrets
        secret:
          defaultMode: 256
          optional: false
          secretName: tom-2-secrets
      - hostPath:
          path: /global/cfs/cdirs/desc-td/SOFTWARE/tom_deployment/production-2/tom_desc/tom_desc
          type: Directory
        name: tom-2-deployment
      - hostPath:
          path: /global/cfs/cdirs/lsst/groups/TD/SOFTWARE/tom_deployment/production-2/query_results
          type: Directory
        name: tom-query-results
      - hostPath:
          path: /global/cfs/cdirs/desc-td/ELASTICC2/
          type: Directory
        name: tom-2-sample
      - hostPath:
          path: /global/cfs/cdirs/lsst/groups/TD/SOFTWARE/tom_deployment/pg_dump
          type: Directory
        name: pgdump
---
apiVersion: v1
kind: Service
metadata:
  name: tom-2-app-shell
  namespace: desc-tom-2
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-app-shell
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
