spin_admin/tom-2/tom-2-query-runner.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tom-2-query-runner
  namespace: desc-tom-2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-query-runner
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        field.cattle.io/ports: '[[]]'
        nersc.gov/collab_uids: 70268,99896
        nersc.gov/gid: "95089"
        nersc.gov/gids: 95089,57177,60152,96414
        nersc.gov/roles: user
        nersc.gov/uid: "95089"
        nersc.gov/username: raknop
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-query-runner
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: tom-2-postgres
        - name: DB_NAME
          value: tom_desc
        - name: DB_PASS
          value: fragile
        - name: DB_USER
          value: postgres
        image: registry.nersc.gov/m1727/raknop/tom_server_bindmount_dev
        imagePullPolicy: Always
        name: tom-2-query-runner
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 95089
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /secrets
          name: tom-2-secrets
        - mountPath: /tom_desc
          name: tom-2-deployment
        - mountPath: /query_results
          name: tom-query-results
        command: [ 'python' ]
        args: [ 'manage.py', 'long_query_runner', '-l' ]
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 57177
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: registry-nersc
      volumes:
      - name: tom-2-secrets
        secret:
          defaultMode: 256
          optional: false
          secretName: tom-2-secrets
      - hostPath:
          path: /global/cfs/cdirs/lsst/groups/TD/SOFTWARE/tom_deployment/production-2/tom_desc/tom_desc
          type: Directory
        name: tom-2-deployment
      - hostPath:
          path: /global/cfs/cdirs/lsst/groups/TD/SOFTWARE/tom_deployment/production-2/query_results
          type: Directory
        name: tom-query-results
---
apiVersion: v1
kind: Service
metadata:
  name: tom-2-query-runner
  namespace: desc-tom-2
spec:
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-query-runner
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
