spin_admin/tom-2/tom-2-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:desc-tom-2:tom-2-app"]'
  name: tom-2-ingress-service
  namespace: desc-tom-2
  ownerReferences:
  - apiVersion: v1beta1/extensions
    controller: true
    kind: Ingress
    name: tom-app-2
    uid: 941f2977-3dac-44b5-9bce-38bf4f3d6380
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workloadID_tom-2-ingress-service: "true"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
