spin_admin/tom-2/zookeeper-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kafka-zookeeper
  namespace: desc-tom-2
spec:
  clusterIP: None
  clusterIPs:
  - None
  ports:
  - name: default
    port: 42
    protocol: TCP
    targetPort: 42
  selector:
    workload.user.cattle.io/workloadselector: deployment-desc-tom-2-kafka-zookeeper
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
