spin_admin/tom-2/tom-2-app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tom-2-app
  namespace: desc-tom-2
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-app
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      annotations:
        cattle.io/timestamp: "2023-02-06T16:44:40Z"
        field.cattle.io/ports: '[[]]'
        nersc.gov/collab_uids: 70268,99896
        nersc.gov/gid: "95089"
        nersc.gov/gids: 95089,57177,60152,96414
        nersc.gov/roles: user
        nersc.gov/uid: "95089"
        nersc.gov/username: raknop
      creationTimestamp: null
      labels:
        workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-app
    spec:
      containers:
      - env:
        - name: DB_HOST
          value: tom-2-postgres
        - name: DB_NAME
          value: tom_desc
        - name: DB_PASS
          value: fragile
        - name: DB_USER
          value: postgres
        - name: CASSANDRA_HOST
          value: tom-2-cassandra
        - name: CASSANDRA_DB
          value: tom_desc
        - name: CASSANDRA_USER
          value: cassandra
        - name: CASSANDRA_PASSWORD
          value: cassandra
        - name: ALERCE_KAFKA_SERVER
          value: b-3-public.publicproduction.o8ncxm.c18.kafka.us-east-1.amazonaws.com:9196,b-2-public.publicproduction.o8ncxm.c18.kafka.us-east-1.amazonaws.com:9196,b-1-public.publicproduction.o8ncxm.c18.kafka.us-east-1.amazonaws.com:9196
        - name: FINK_GROUP_ID
          value: lsstfr-johann
        - name: FINK_SERVER
          value: 134.158.74.95:24499,
        - name: FINK_TOPIC
          value: fink_early_sn_candidates_ztf
        - name: FINK_USERNAME
          value: johann
        - name: GOOGLE_APPLICATION_CREDENTIALS
          value: /secrets/pitt_google_auth_key.json
        - name: GOOGLE_CLOUD_PROJECT
          value: elasticc-challenge
        image: registry.nersc.gov/m1727/raknop/tom_server_bindmount_dev
        imagePullPolicy: Always
        name: tom-2-app
        resources: {}
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            add:
            - NET_BIND_SERVICE
            drop:
            - ALL
          privileged: false
          readOnlyRootFilesystem: false
          runAsNonRoot: true
          runAsUser: 95089
        stdin: true
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        tty: true
        volumeMounts:
        - mountPath: /secrets
          name: tom-2-secrets
        - mountPath: /tom_desc
          name: tom-2-deployment
        - mountPath: /query_results
          name: tom-query-results
        # - mountPath: /sample
        #   name: tom-2-sample
      dnsConfig: {}
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 57177
      terminationGracePeriodSeconds: 30
      imagePullSecrets:
        - name: registry-nersc
      volumes:
      - name: tom-2-secrets
        secret:
          defaultMode: 256
          optional: false
          secretName: tom-2-secrets
      - hostPath:
          path: /global/cfs/cdirs/lsst/groups/TD/SOFTWARE/tom_deployment/production-2/tom_desc/tom_desc
          type: Directory
        name: tom-2-deployment
      - hostPath:
          path: /global/cfs/cdirs/lsst/groups/TD/SOFTWARE/tom_deployment/production-2/query_results
          type: Directory
        name: tom-query-results
      # - hostPath:
      #     path: /global/cfs/cdirs/desc-td/ELASTICC2
      #     type: Directory
      #   name: tom-2-sample
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:desc-tom-2:tom-2-app"]'
  name: tom-2-ingress-service
  namespace: desc-tom-2
  ownerReferences:
  - apiVersion: v1beta1/extensions
    controller: true
    kind: Ingress
    name: tom-app-2
    uid: 941f2977-3dac-44b5-9bce-38bf4f3d6380
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workloadID_tom-2-ingress-service: "true"
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    field.cattle.io/targetWorkloadIds: '["deployment:desc-tom-2:tom-2-app"]'
  name: tom-2-ingress-service
  namespace: desc-tom-2
  ownerReferences:
  - apiVersion: v1beta1/extensions
    controller: true
    kind: Ingress
    name: tom-app-2
    uid: 941f2977-3dac-44b5-9bce-38bf4f3d6380
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    workload.user.cattle.io/workloadselector: deployment-desc-tom-2-tom-2-app
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nersc.gov/clustername: production
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  generation: 3
  labels:
    cattle.io/creator: norman
  name: tom-app-2
  namespace: desc-tom-2
  selfLink: /apis/networking.k8s.io/v1/namespaces/desc-tom-2/ingresses/tom-app-2
spec:
  rules:
  - host: tom-app-2.desc-tom-2.production.svc.spin.nersc.org
    http:
      paths:
      - backend:
          service:
            name: tom-2-ingress-service
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: desc-tom-2.lbl.gov
    http:
      paths:
      - backend:
          service:
            name: tom-2-ingress-service
            port:
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - desc-tom-2.lbl.gov
    secretName: tom-2-cert
---
