spin_admin/tom-2/tom-2-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nersc.gov/clustername: production
    nginx.ingress.kubernetes.io/preserve-trailing-slash: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 500m
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
  generation: 3
  labels:
    cattle.io/creator: norman
  name: tom-app-2
  namespace: desc-tom-2
  selfLink: /apis/networking.k8s.io/v1/namespaces/desc-tom-2/ingresses/tom-app-2
  uid: 941f2977-3dac-44b5-9bce-38bf4f3d6380
spec:
  rules:
  - host: tom-app-2.desc-tom-2.production.svc.spin.nersc.org
    http:
      paths:
      - backend:
          service:
            name: tom-2-ingress-service
            port:
              number: 8080
        pathType: ImplementationSpecific
  - host: desc-tom-2.lbl.gov
    http:
      paths:
      - backend:
          service:
            name: tom-2-ingress-service
            port:
              number: 8080
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - desc-tom-2.lbl.gov
    secretName: tom-2-cert
